Item371:    * working arround "table-layout:fixed" bug in firefox < 1.5      where the complete layout collapses sporadically    * minor PatternStyle layout fixes    * fixed screenshots being too large in the TWikiSkinBrowser    * some w3c validation fixes
git-svn-id: http://develop.twiki.org/svn/twiki/branches/DEVELOP/twikiplugins@7887 a00a5322-12db-0310-a70b-8735589c885e

--- a/NatSkin/pub/TWiki/NatSkin/BaseThin.css
+++ b/NatSkin/pub/TWiki/NatSkin/BaseThin.css
@@ -1,4 +1,7 @@
 /* thin variant for base */
+.natLayoutTable {
+  width:60em;
+}
 .natPageBox {
   width:60em;
   margin-right:auto;
