--- a/NatSkin/pub/TWiki/NatSkin/PatternThin.css
+++ b/NatSkin/pub/TWiki/NatSkin/PatternThin.css
@@ -1,6 +1,7 @@
 /* thin variant for clean */
 @import url("BaseThin.css");
 
+.natLayoutTable,
 .natPageBox {
   width:70em;
 }
